# research-artifact-uploader

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: cli.md  design.md  upload_records.jsonl  upload_records.md  workflows.md
examples/: artifacts.yaml
examples/fake_run/: metrics.jsonl
src/: archive.rs  cli.rs  collect.rs  gitinfo.rs  lib.rs  main.rs  manifest.rs  metadata.rs  oss.rs  paths.rs  records.rs  subprocess_utils.rs
src/research_artifact_uploader/: __init__.py  archive.py  cli.py  collect.py  gitinfo.py  manifest.py  metadata.py  oss.py  paths.py  records.py  subprocess_utils.py
tests/: research_artifact_uploader.rs  test_archive.py  test_collect.py  test_manifest.py
