[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-artifact-uploader"
version = "0.1.0"
description = "Conservative uploader for research artifacts to Alibaba Cloud OSS."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12,<1",
  "PyYAML>=6.0",
  "rich>=13.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
rau = "research_artifact_uploader.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = ["-q"]
